# BnsDatafilePlugin_ItemSwap2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  UpdateSubmodules.bat  version.rc.in
.github/workflows/: build-and-release.yml  cmake-single-platform.yml  release-build.yml  update-submodules-periodically.yml
BnsDatafilePlugin/: BnsDatafilePlugin.cpp  CMakeLists.txt  GlobalState.h  Logger.h  UiPanel.cpp  UiPanel.h  datafile_detours.cpp  datafile_detours.h  plugin_config.cpp  plugin_config.h  pluginhelpers.h  pluginversion.h.in  serialization_macros.hpp
BnsDatafilePlugin/UiPanels/: ItemBrowserUiPanel.cpp  ItemBrowserUiPanel.hpp
